sourcery-macros/tests/ui/fail/aggregate_on_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields, unnamed fields, or no fields.
  --> tests/ui/fail/aggregate_on_enum.rs:22:10
   |
22 | #[derive(Aggregate)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `Aggregate` (in Nightly builds, run with -Z macro-backtrace for more info)
